--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "@hello-pangea/dnd": "^18.0.1",
         "@hookform/resolvers": "^5.0.1",
+        "@radix-ui/react-alert-dialog": "^1.1.13",
         "@radix-ui/react-avatar": "^1.1.7",
         "@radix-ui/react-dialog": "^1.1.13",
         "@radix-ui/react-dropdown-menu": "^2.1.7",
@@ -31,6 +32,8 @@
         "@radix-ui/react-toast": "^1.2.7",
         "@radix-ui/react-tooltip": "^1.2.6",
         "@react-spring/web": "^9.7.5",
+        "axios": "^1.9.0",
+        "canvas-confetti": "^1.9.3",
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "framer-motion": "^12.10.5",
@@ -39,6 +42,7 @@
         "recharts": "^2.15.3",
         "sweetalert2": "^11.18.0",
         "tailwind-merge": "^3.2.0",
+        "ziggy-js": "^2.5.3",
         "zod": "^3.24.2"
     }
 }
